--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Seru Giran</title>
+	<title>Contacto</title>
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i&display=swap" rel="stylesheet">
 			<link rel="stylesheet" href="css/general.css"/>
 </head>
 <body>
 
 	<header>
-		<h1>
+		<h1 class="swing">
 			<a href="index.html">
 		<img src="imagenes/Seru-Logo-negro2.png" alt="Serú Girán Logo">
 		</a>
@@ -31,16 +31,38 @@
 	
 		</header>
 
-			<div>
-		<img src="imagenes/Serugiran-back.jpg" alt="Serú Back" width="1200px">
-	</div>
+			<form> 
+		<fieldset>
+			<div>Sexo: <br>
+			<label for="sexo">Hombre</label>
+				<input type="radio" name="sexo" value="hombre"/>
+	    	<label for="sexo">Mujer</label>
+	    		<input type="radio" name="sexo" value="mujer"/> </div> <br>
+	    	<label for="nombre">Nombre:</label> <br>
+	    		<input type="text" name="nombre" placeholder="Nombre"> <br> <br>
+	    	<label for="apellido">Apellido:</label> <br>
+	    		<input type="text" name="apellido" placeholder="Apellido"> <br> <br>
+	    	<label for="mail">Mail:</label> <br>
+	    		<input type="email" name="mail" placeholder="usuario@servidor.com"> <br> <br>
+	    	<label for="seleccione">Recibir info de:</label>
+		    	<select name="seleccione">
+		    		<option value="seleccionar">(Seleccionar uno)</option>
+		    		<option value="Discos">Discos</option>
+		    		<option value="Noticias">Noticias</option> 
+		    		<option value="Canciones">Canciones</option>
+		    		<option value="Otro">Otro</option>
+		    <input type="text" placeholder="Escribe aqui..."> <br> <br>
+		    <input type="submit" value="Enviar">
+		    <input type="reset" name="Restablecer">
+	    	<legend>Estamos en contacto!</legend>
+	    </fieldset>
+	</form>
+
 	<footer>
 	© Derechos Reservados 2020 delPra  
-	<a href="https://www.fernandodelprado.com"><img src="imagenes/redes-face.png" width="50px" /></a>
-		<a href="https://www.instagram.com/delpradoarte"><img src="imagenes/redes-insta.png" width="50px" /></a>
-		
+	<a href="https://www.fernandodelprado.com"><img src="imagenes/redes-face.png" /></a>
+		<a href="https://www.instagram.com/delpradoarte"><img src="imagenes/redes-insta.png"/></a>
 </footer>
-
 </body>
 
 </html>
